# BookStrore

./: Cargo.toml  README.md  docker-compose.yml
admin-panel/: Dockerfile  books.html  dashboard.html  index.html  orders.html  upload.html  users.html
admin-panel/css/: admin.css  books.css  dashboard.css  login.css  orders.css  upload.css
admin-panel/js/: admin-api.js  admin-auth.js  book-manager.js  dashboard.js  order-manager.js  upload.js
database/: init.sql
database/migrations/: 001_create_users.sql  002_create_books.sql  003_create_categories.sql  004_create_orders.sql  005_create_payments.sql  006_create_sessions.sql  007_critical_security_fixes.sql  008_fix_ip_address_column.sql  009_fix_security_events_table.sql  010_payment_service_enhancements.sql  011_add_refresh_tokens.sql  012_add_password_reset_and_verification.sql  013_create_security_events.sql  014_complete_missing_tables.sql  015_add_login_otp.sql  016_create_reviews_table.sql
database/seeds/: admin_user.sql  books.sql  categories.sql
frontend/: Dockerfile  book.html  checkout.html  forgot-password.html  index.html  library.html  login.html  profile.html  reader.html  register.html  reset-password.html  verify-email.html  verify-otp.html
frontend/css/: components.css  improvements.css  modern-theme.css  responsive.css  style.css
frontend/js/: api.js  app.js  auth.js  cart.js  mobile-nav.js  payment.js  utils.js
services/api-gateway/: Cargo.toml
services/api-gateway/src/: circuit_breaker.rs  error.rs  main.rs  service_discovery.rs
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: docs.rs  main.rs  models.rs
services/auth-service/src/api/: mod.rs
services/auth-service/src/api/handlers/: admin.rs  auth.rs  internal.rs  mod.rs  oauth.rs  user.rs
services/auth-service/src/core/: jwt.rs  mod.rs
services/auth-service/src/db/: mod.rs  security_service.rs  user_repository.rs
services/auth-service/src/middleware/: auth.rs  mod.rs
services/auth-service/src/services/: circuit_breaker.rs  client.rs  mod.rs  oauth_service.rs  service_discovery.rs
services/auth-service/src/utils/: common.rs  email_service.rs  error.rs  mod.rs  scheduler.rs
services/book-service/: Cargo.toml  Dockerfile
services/book-service/src/: circuit_breaker.rs  database.rs  error.rs  handlers.rs  main.rs  models.rs  service_discovery.rs  upload.rs
services/payment-service/: Cargo.toml  Dockerfile
services/payment-service/src/: main.rs  models.rs
services/payment-service/src/api/: handlers.rs  mod.rs  routes.rs
services/payment-service/src/core/: midtrans.rs  mod.rs  payment.rs
services/payment-service/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs
services/payment-service/src/repository/: audit.rs  mod.rs  order.rs  payment.rs
services/payment-service/src/utils/: banner.rs  cache.rs  circuit_breaker.rs  constants.rs  cors.rs  error.rs  health.rs  logger.rs  mod.rs  scheduler.rs  service_discovery.rs  validator.rs
