# /pdf-bookstore/Cargo.toml

[workspace]
members = [
    "services/auth-service",
    "services/book-service", 
    "services/payment-service",
    "services/api-gateway",
]
resolver = "2"

[workspace.dependencies]
# Core web framework & async runtime
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.6", features = ["multipart", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.5", features = [
    "cors", "trace", "timeout", "compression-gzip", "fs","request-id"
] }
async-trait = "0.1.89"

# Database 
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls", "postgres", "chrono",
    "uuid", "json", "bigdecimal", "migrate", "ipnetwork"
] }
bigdecimal = { version = "0.4.5", features = ["serde"] }

# Serialization & data handling
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }

# Environment & configuration
dotenvy = "0.15.7"

# Authentication & security
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
argon2 = "0.5.3"

# Logging & monitoring dengan enhanced features
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# Input validation & error handling
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.17"

# HTTP client & utilities
hyper = { version = "1.7.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
rand = "0.9.2"
hex = "0.4"
hmac = "0.12"

# File upload & multipart handling
multer = "3.1.0"
tokio-util = { version = "0.7.16", features = ["io"] }

# Cryptography & encoding
base64 = "0.22.1"
sha2 = "0.10.8"

# Background job scheduling
tokio-cron-scheduler = "0.15.0"

# Additional useful dependencies
regex = "1.12.2"
anyhow = "1.0.90"
once_cell = "1.19"

# Testing dependencies
tokio-test = "0.4"
mockito = "1.4"
serial_test = "3.1"

redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager", "aio"] }
lazy_static = "1.4"

utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }
lettre = { version = "0.11.19", features = ["tokio1-native-tls"] }

